spring Security自定义登录、登出功能

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-	就是一个首页html
+	默认首页，不需要登录；<br/>
+	登录后，默认跳转到到welcome.html；<br/>
+	登出后，跳转回本页面
 </body>
 </html>
