spring Security remember-me

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -18,6 +18,10 @@
 				<td><input type="password" name="password"></td>
 			</tr>
 			<tr>
+				<td>记住登录：</td>
+				<td><input id="remember-me" name=remember-me type="checkbox"/></td>
+			</tr>
+			<tr>
 				<td colspan="2"><button type="submit">登录</button></td>
 			</tr>
 		</table>
